--- a/backend_deposit/templates/includes/operator_menu.html
+++ b/backend_deposit/templates/includes/operator_menu.html
@@ -53,6 +53,11 @@
 
 
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          {% if user.is_superuser %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'deposit:z_asu_management' %}">Управление Z-ASU</a>
+          </li>
+          {% endif %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'deposit:birpay_panel' %}">birpay_panel</a>
           </li>
