тестовый чек на 45

--- a/backend_deposit/templates/deposit/birpay_order_create.html
+++ b/backend_deposit/templates/deposit/birpay_order_create.html
@@ -139,7 +139,7 @@
                         {% if form.check_file_url.errors %}
                             <div class="text-danger small">{{ form.check_file_url.errors|striptags }}</div>
                         {% endif %}
-                        <small class="form-text text-muted">URL изображения чека для скачивания. По умолчанию: http://127.0.0.1:8002/media/screens/574545888_from_R13_703695562.jpg</small>
+                        <small class="form-text text-muted">URL изображения чека для скачивания. По умолчанию: http://45.14.247.139/media/uploaded_pay_screens/Frame_38_ysLyLMQ.jpg</small>
                     </div>
                 </div>
 
@@ -163,7 +163,7 @@
                 <li><strong>Сумма:</strong> По умолчанию 100.0.</li>
                 <li><strong>Даты создания и обновления:</strong> Автоматически заполняются текущим временем.</li>
                 <li><strong>Номер карты:</strong> По умолчанию "4111 1111 1111 1111".</li>
-                <li><strong>URL чека:</strong> По умолчанию "http://127.0.0.1:8002/media/screens/574545888_from_R13_703695562.jpg".</li>
+                <li><strong>URL чека:</strong> По умолчанию "http://45.14.247.139/media/uploaded_pay_screens/Frame_38_ysLyLMQ.jpg".</li>
                 <li><strong>Статус:</strong> 0 - ожидает подтверждения, 1 - подтвержден, 2 - отклонен.</li>
                 <li><strong>Raw Data:</strong> Автоматически создается на основе заполненных полей в формате, похожем на данные от Birpay API.</li>
                 <li><strong>Sender:</strong> Автоматически заполняется последними 4 цифрами номера карты.</li>
