--- a/backend_deposit/templates/includes/operator_menu.html
+++ b/backend_deposit/templates/includes/operator_menu.html
@@ -55,7 +55,7 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           {% if user.is_superuser %}
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'deposit:z_asu_management' %}">Управление Z-ASU</a>
+            <a class="nav-link position-relative" href="{% url 'deposit:z_asu_management' %}">Управление Z-ASU <span class="position-absolute top-0 start-100 translate-middle p-1 bg-danger border border-light rounded-circle" style="font-size: 6px;" title="Только суперпользователь" aria-label="Метка"></span></a>
           </li>
           {% endif %}
           <li class="nav-item">
