--- a/backend_deposit/templates/deposit/birpay_orders.html
+++ b/backend_deposit/templates/deposit/birpay_orders.html
@@ -45,6 +45,8 @@
             <td>{{ birpay_stats.sum_amount|floatformat:2 }}</td>
             <td><b>Сумма delta</b></td>
             <td>{{ birpay_stats.sum_delta|floatformat:2 }}</td>
+            <td><b>Сумма confirmed (status=1)</b></td>
+            <td>{{ birpay_stats.sum_confirmed_amount|floatformat:2 }}</td>
             <td><b>Статус 0</b></td>
             <td>{{ birpay_stats.status_0 }}</td>
             <td><b>Статус 1</b></td>
