--- a/backend_deposit/templates/includes/operator_menu.html
+++ b/backend_deposit/templates/includes/operator_menu.html
@@ -26,6 +26,7 @@
             <li><a class="dropdown-item" href="{% url 'deposit:painter_list' %}">Список рисовальщиков</a></li>
             <li><a class="dropdown-item" href="{% url 'deposit:users_stat' %}">Список юзеров</a></li>
             <li><a class="dropdown-item" href="{% url 'deposit:operator_speed_graph' %}">Скорость операторов</a></li>
+            <li><a class="dropdown-item" href="{% url 'deposit:merchant_tx_id_search' %}">Поиск данных по Merchant Tx ID</a></li>
             {% if user.is_superuser or user.role == 'admin' or user.role == 'editor' %}
               <li><a class="dropdown-item" href="{% url 'deposit:requisite_zajon_list' %}">Реквизиты Zajon</a></li>
               <li><a class="dropdown-item" href="{% url 'deposit:requisite_zajon_change_logs' %}">Логи изменений реквизитов</a></li>
